# domainColoring

./: .gitignore  CMakeLists.txt
src/compressor/: RGB.cpp  cui.cpp  cui.hpp  main.cpp  reading.cpp  reading.hpp  writing.cpp
src/domainColoring/: cui.hpp  main.cpp  render.cu  render.cuh
src/libprv/: PRVcompressor.cpp  PRVcompressor.hpp  Pixel.cpp  Pixel.hpp  RGB.hpp  checking.cpp  checking.hpp  writing.hpp
src/player/: main.cu  render.cu  render.cuh
